# rust-knowledge-search

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  agent.md  plan.md  开发日志.md  期末作业要求.md  项目协作文档.md
docs/: 实验报告素材.md  接口设计.md  文件管理说明.md  测试计划.md  演示脚本.md
examples/sample_notes/: error_handling.txt  project_intro.txt  rust_ownership.md  search_system.md
src/: chunker.rs  cli.rs  error.rs  indexer.rs  lib.rs  main.rs  parser.rs  scanner.rs  search.rs  semantic.rs  storage.rs
tests/: integration_test.rs
