[package]
name = "rust-knowledge-search"
version = "0.1.0"
edition = "2021"
description = "基于 Rust 的本地知识库语义搜索系统"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "rust_knowledge_search"
path = "src/lib.rs"

[[bin]]
name = "rust-knowledge-search"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
